Replace with Java 16 toList() shortcut