@@ -2,7 +2,6 @@ package swcs.mockito.carsearch;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CarSearch {
 
@@ -19,6 +18,6 @@ public class CarSearch {
     public List<Car> findSportCars() {
         return this.cars.stream()
                 .filter(Car::isSportCar)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
